# ChangeLog for app-text/asciidoc
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/asciidoc/ChangeLog,v 1.93 2014/03/31 20:36:42 mgorny Exp $

*asciidoc-8.6.9 (15 Aug 2014)

  15 Aug 2014; Denis Dupeyron <calchan@gentoo.org> +asciidoc-8.6.9.ebuild,
  +metadata.xml:
  Version bump, thanks to Tolga Dalman (bug #494250).

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> asciidoc-8.6.8-r1.ebuild,
  asciidoc-9999.ebuild:
  Add support for the new PyPy slotting.

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> asciidoc-8.6.5.ebuild,
  asciidoc-8.6.8-r1.ebuild, asciidoc-9999.ebuild:
  Add arm64 love.

  13 Oct 2013; Pacho Ramos <pacho@gentoo.org> asciidoc-8.6.8-r1.ebuild:
  Fix REQUIRED_USE as pointed by Nikoli

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> asciidoc-8.6.8-r1.ebuild,
  asciidoc-9999.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  21 Jul 2013; Pacho Ramos <pacho@gentoo.org> -asciidoc-8.2.6.ebuild,
  -asciidoc-8.6.7.ebuild, -asciidoc-8.6.8.ebuild, metadata.xml:
  Cleanup due http://gentoo.2317880.n4.nabble.com/sgml-herd-has-no-maintainers-
  again-td259655.html

  30 Jun 2013; Justin Lecher <jlec@gentoo.org> asciidoc-8.6.8-r1.ebuild,
  asciidoc-9999.ebuild:
  Fix usage of python-r1.eclass

  23 Feb 2013; Zac Medico <zmedico@gentoo.org> asciidoc-8.6.8-r1.ebuild,
  asciidoc-9999.ebuild:
  Add ~arm-linux and ~x86-linux keywords.

*asciidoc-8.6.8-r1 (23 Feb 2013)

  23 Feb 2013; Mike Gilbert <floppym@gentoo.org> +asciidoc-8.6.8-r1.ebuild,
  asciidoc-9999.ebuild:
  Convert to python-single-r1, bug 458802 by mgorny.

  27 Dec 2012; Christoph Junghans <ottxor@gentoo.org> asciidoc-8.2.6.ebuild,
  asciidoc-8.6.5.ebuild, asciidoc-8.6.7.ebuild, asciidoc-8.6.8.ebuild,
  asciidoc-9999.ebuild:
  mercurial.eclass respects  now

  15 Sep 2012; Mike Gilbert <floppym@gentoo.org> +asciidoc-8.2.6.ebuild:
  Restore old version needed by dev-vcs/stgit-0.15-r1.
